# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/channel.gni")
import("//build/config/android/config.gni")

declare_args() {
  # Show a launcher icon to open WebView developer UI. This is enabled by
  # default for all prestable builds. The icon for Monochrome is shown
  # dynamically at runtime if Monochrome is the current selected system WebView
  # implementation or hidden otherwise.
  webview_devui_show_icon = android_channel != "stable"
}

upstream_only_webview_deps = [
  "//android_webview:platform_service_bridge_upstream_implementation_java",
  "//android_webview/nonembedded:icon_resources",
]

webview_product_config_java_package = "org.chromium.android_webview"
